# bayesian_statistics_for_computational_biology

./: .gitignore  _quarto.yml  bibliography.bib  day-1-am-motivating-example.ipynb  pyproject.toml  readme.md
bo/: hello.ipynb  hello.py  pyproject.toml
course/: index.md  practical-1-setup.md  practical-4-jax.qmd  practical-6-odes.qmd  practical-7-odes-continued.ipynb  theory-1-introduction.md  theory-1-motivating-example-ode.ipynb  theory-2-regression.md  theory-3-mcmc.qmd  theory-4-diagnostics.qmd  theory-5-odes.md  theory-5-odes.quarto_ipynb  theory-6-gps.ipynb  theory-6-gps.qmd
course_materials/: day-1-am-introduction.md  day-1-am-motivating-example.ipynb  day-1-pm-setup.md  day-2-am-regression.md  day-2-pm-bambi.qmd  day-3-am-mcmc.qmd  day-3-pm-stack.qmd  day-4-am-jax.qmd  day-5-am-diagnostics.qmd  day-5-pm-diagnostics-example.qmd  index.md
docs/: index.html  search.json
docs/course/: index.html  index.ipynb  motivating-example.out.ipynb  practical-1-setup.html  practical-1-setup.ipynb  practical-2-bambi.ipynb  practical-3-stack.html  practical-3-stack.ipynb  practical-4-jax.html  practical-4-jax.ipynb  practical-5-diagnostics.ipynb  practical-6-odes.html  practical-6-odes.ipynb  radon.ipynb  theory-1-introduction.html  theory-1-introduction.ipynb  theory-1-motivating-example-ode.html  theory-1-motivating-example-ode.out.ipynb  theory-2-regression.html  theory-2-regression.ipynb  theory-3-mcmc.html  theory-3-mcmc.ipynb  theory-4-diagnostics.html  theory-5-odes.html  (+2 more)
scripts/: plot_normal_distribution.py
writing/: bibliography.bib  day-1-am-introduction.md
(+23 files in other folders)
