[project]
name = "bayesian_statistics_for_computational_biology"
version = "0.0.1"
description = "Default template for PDM package"
authors = [
    {name = "Teddy Groves", email = "groves.teddy@gmail.com"},
]
dependencies = [
    "arviz>=0.17.0",
    "bambi>=0.15.0",
    "cmdstanpy>=1.2.1",
    "diffrax>=0.7.0",
    "jax>=0.6.2",
    "jupyter>=1.0.0",
    "optimistix>=0.0.10",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
